convert all parsers to take a transaction in their constructor