@@ -1,11 +1,6 @@
 package net.stemmaweb.parser;
 
-import java.io.BufferedInputStream;
-import java.io.File;
-import java.io.FileOutputStream;
-import java.io.IOException;
-import java.io.InputStream;
-import java.nio.file.Files;
+import java.io.*;
 import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.LinkedHashMap;
@@ -15,9 +10,7 @@ import java.util.zip.ZipInputStream;
 
 import javax.xml.parsers.DocumentBuilderFactory;
 
-import org.apache.commons.compress.utils.IOUtils;
 import org.neo4j.graphdb.Direction;
-import org.neo4j.graphdb.GraphDatabaseService;
 import org.neo4j.graphdb.Node;
 import org.neo4j.graphdb.Path;
 import org.neo4j.graphdb.PathExpander;
@@ -32,7 +25,6 @@ import net.stemmaweb.model.RelationTypeModel;
 import net.stemmaweb.rest.ERelations;
 import net.stemmaweb.rest.Nodes;
 import net.stemmaweb.services.DatabaseService;
-import net.stemmaweb.services.GraphDatabaseServiceProvider;
 import net.stemmaweb.services.VariantGraphService;
 
 /**
@@ -42,47 +34,33 @@ import net.stemmaweb.services.VariantGraphService;
 public class Util {
 
     // Start and end node creation
-    static Node createStartNode(Node parentNode) {
-//        GraphDatabaseService db = parentNode.getGraphDatabase();
-        GraphDatabaseService db = new GraphDatabaseServiceProvider().getDatabase();
-        Node startNode;
-        try (Transaction tx = db.beginTx()) {
-	        startNode = tx.createNode(Nodes.READING);
-	        startNode.setProperty("is_start", true);
-	        startNode.setProperty("section_id", parentNode.getElementId());
-	        startNode.setProperty("rank", 0L);
-	        startNode.setProperty("text", "#START#");
-	        parentNode.createRelationshipTo(startNode, ERelations.COLLATION);
-	        tx.close();
-        }
+    static Node createStartNode(Transaction tx, Node parentNode) {
+        Node startNode = tx.createNode(Nodes.READING);
+        startNode.setProperty("is_start", true);
+        startNode.setProperty("section_id", parentNode.getElementId());
+        startNode.setProperty("rank", 0L);
+        startNode.setProperty("text", "#START#");
+        parentNode.createRelationshipTo(startNode, ERelations.COLLATION);
         return startNode;
     }
 
     // Start and end node creation
-    static Node createEndNode(Node parentNode) {
-//        GraphDatabaseService db = parentNode.getGraphDatabase();
-        GraphDatabaseService db = new GraphDatabaseServiceProvider().getDatabase();
-        Node endNode;
-        try (Transaction tx = db.beginTx()) {
-	        endNode = tx.createNode(Nodes.READING);
-	        endNode.setProperty("is_end", true);
-	        endNode.setProperty("section_id", parentNode.getElementId());
-	        endNode.setProperty("text", "#END#");
-	        parentNode.createRelationshipTo(endNode, ERelations.HAS_END);
-	        tx.close();
-        }
+    static Node createEndNode(Transaction tx, Node parentNode) {
+        Node endNode = tx.createNode(Nodes.READING);
+        endNode.setProperty("is_end", true);
+        endNode.setProperty("section_id", parentNode.getElementId());
+        endNode.setProperty("text", "#END#");
+        parentNode.createRelationshipTo(endNode, ERelations.HAS_END);
         return endNode;
     }
 
     // Witness node creation
-    static Node createWitness(Node traditionNode, String sigil, Boolean hypothetical, Transaction tx) throws IllegalArgumentException {
+    static Node createWitness(Transaction tx, String sigil, Boolean hypothetical) throws IllegalArgumentException {
         // First check if the sigil has any characters that will cause trouble for REST
         for (String illegal : new String[] {"<", ">", "#", "%", "\"", "{", "}", "|", "\\", "^", "[", "]", "`", "(", ")"})
             if (sigil.contains(illegal))
                 throw new IllegalArgumentException("The character " + illegal + " may not appear in a sigil name.");
-        Node witnessNode;
-//        GraphDatabaseService db = traditionNode.getGraphDatabase();
-        witnessNode = tx.createNode(Nodes.WITNESS);
+        Node witnessNode = tx.createNode(Nodes.WITNESS);
         witnessNode.setProperty("sigil", sigil);
         witnessNode.setProperty("hypothetical", hypothetical);
         witnessNode.setProperty("quotesigil", !isDotId(sigil));
@@ -90,34 +68,29 @@ public class Util {
         return witnessNode;
     }
 
-    static Node findOrCreateExtant(Node traditionNode, String sigil, Transaction tx) {
+    static Node findOrCreateExtant(Transaction tx, Node traditionNode, String sigil) {
         // This list should contain either zero or one items.
         ArrayList<Node> existingWit = DatabaseService.getRelated(traditionNode, ERelations.HAS_WITNESS)
                 .stream().filter(x -> x.hasProperty("hypothetical")
                         && x.getProperty("hypothetical").equals(false)
                         && x.getProperty("sigil").equals(sigil))
                 .collect(Collectors.toCollection(ArrayList::new));
-        if (existingWit.size() == 0) {
-            Node witnessNode = createWitness(traditionNode, sigil, false, tx);
+        if (existingWit.isEmpty()) {
+            Node witnessNode = createWitness(tx, sigil, false);
             traditionNode.createRelationshipTo(witnessNode, ERelations.HAS_WITNESS);
             return witnessNode;
         } else {
-            return existingWit.get(0);
+            return existingWit.getFirst();
         }
     }
 
-    static void ensureSectionLink (Node traditionNode, Node sectionNode) {
-//        GraphDatabaseService db = traditionNode.getGraphDatabase();
-        GraphDatabaseService db = new GraphDatabaseServiceProvider().getDatabase();
-        try (Transaction tx = db.beginTx()) {
-            String tradId = traditionNode.getProperty("id").toString();
-            ArrayList<Node> tsections = VariantGraphService.getSectionNodes(tx, tradId);
-            if (!tsections.contains(sectionNode)) {
-                traditionNode.createRelationshipTo(sectionNode, ERelations.PART);
-                if (!tsections.isEmpty())
-                    tsections.get(tsections.size()-1).createRelationshipTo(sectionNode, ERelations.NEXT);
-            }
-            tx.close();
+    static void ensureSectionLink (Transaction tx, Node traditionNode, Node sectionNode) {
+        String tradId = traditionNode.getProperty("id").toString();
+        ArrayList<Node> tsections = VariantGraphService.getSectionNodes(tx, tradId);
+        if (!tsections.contains(sectionNode)) {
+            traditionNode.createRelationshipTo(sectionNode, ERelations.PART);
+            if (!tsections.isEmpty())
+                tsections.getLast().createRelationshipTo(sectionNode, ERelations.NEXT);
         }
     }
 
@@ -138,28 +111,17 @@ public class Util {
 
     // Zip parsing utilities - public because also used by test suite
     // Returns a structure which is a list of zip
-    public static LinkedHashMap<String,File> extractGraphMLZip(InputStream is) throws IOException {
-        LinkedHashMap<String,File> result = new LinkedHashMap<>();
+    public static LinkedHashMap<String, InputStream> extractGraphMLZip(InputStream is) throws IOException {
+        LinkedHashMap<String, InputStream> result = new LinkedHashMap<>();
         BufferedInputStream buf = new BufferedInputStream(is);
         ZipInputStream zipIn = new ZipInputStream(buf);
         ZipEntry ze;
         while ((ze = zipIn.getNextEntry()) != null) {
-            // SOMEDAY can we do this without writing out to a file?
-            String zfName = ze.getName();
-            File someTmp = File.createTempFile(zfName, "");
-            FileOutputStream fo = new FileOutputStream(someTmp);
-            IOUtils.copy(zipIn, fo);
-            fo.close();
+            result.put(ze.getName(), new ByteArrayInputStream(zipIn.readAllBytes()));
             zipIn.closeEntry();
-            result.put(zfName, someTmp);
         }
         zipIn.close();
         return result;
-    }
-
-    public static void cleanupExtractedZip(LinkedHashMap<String,File> result) throws IOException {
-        for (File f : result.values())
-            Files.deleteIfExists(f.toPath());
     }
 
     // Helper to get any existing SEQUENCE link between two readings.
@@ -194,12 +156,11 @@ public class Util {
         }
     }
 
-    @SuppressWarnings("rawtypes")
-    public static PathExpander getExpander (Direction d, String stemmaName) {
+    public static PathExpander<Void> getExpander (Direction d, String stemmaName) {
         final String pStemmaName = stemmaName;
-        return new PathExpander() {
+        return new PathExpander<>() {
             @Override
-            public ResourceIterable expand(Path path, BranchState branchState) {
+            public ResourceIterable<Relationship> expand(Path path, BranchState branchState) {
                 ArrayList<Relationship> goodPaths = new ArrayList<>();
                 for (Relationship link : path.endNode()
                         .getRelationships(d, ERelations.TRANSMITTED)) {
@@ -211,7 +172,7 @@ public class Util {
             }
 
             @Override
-            public PathExpander reverse() {
+            public PathExpander<Void> reverse() {
                 return null;
             }
         };
